--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,35 @@
-.App {
+*{
+  box-sizing: border-box;
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
+
+body{
+  background: rgb(179,198,210);
+  background: linear-gradient(0deg, rgba(187,198,205,1) 0%, rgba(238,238,238,1) 100%);  height: 100vh;
+}
+
+main{
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  max-width: 800px;
+  text-align: center;
+  width: 80vw;
+}
+
+input{
+  border-radius: 15px;
+  display: block;
+  margin: 15px;
+  min-width: 300px;
+  padding: 20px;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button{
+  background-color: orange;
+  margin: 15px;
+  padding: 20px;
 }
