--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,9 @@
 
 body{
   background: rgb(179,198,210);
-  background: linear-gradient(0deg, rgba(187,198,205,1) 0%, rgba(238,238,238,1) 100%);  height: 100vh;
+  background: linear-gradient(0deg, rgba(187,198,205,1) 0%, rgba(238,238,238,1) 100%);  
+  height: 100%;
+  min-height: 100vh;
 }
 
 main{
@@ -22,7 +24,7 @@ main{
 input{
   border-radius: 15px;
   display: block;
-  margin: 15px;
+  margin: 15px auto;
   min-width: 300px;
   padding: 20px;
   text-align: center;
@@ -32,4 +34,15 @@ button{
   background-color: orange;
   margin: 15px;
   padding: 20px;
+}
+
+.stats{
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.stats__stat{
+    padding: 50px;
+    width: 50%;
 }
