--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,20 @@
 *{
   box-sizing: border-box;
   border: 0;
+  color: white;
+  font-family: 'Exo 2', sans-serif;
   margin: 0;
   padding: 0;
 }
 
 body{
   background: rgb(179,198,210);
-  background: linear-gradient(0deg, rgba(187,198,205,1) 0%, rgba(238,238,238,1) 100%);  
+  background: linear-gradient(180deg, rgba(207,87,9,1) 0%, rgba(180,40,40,1) 100%);
   height: 100%;
   min-height: 100vh;
 }
 
 main{
-  display: flex;
-  justify-content: center;
   margin: 0 auto;
   max-width: 800px;
   text-align: center;
@@ -23,7 +23,7 @@ main{
 
 input{
   border-radius: 15px;
-  display: block;
+  color: black;
   margin: 15px auto;
   min-width: 300px;
   padding: 20px;
@@ -32,17 +32,59 @@ input{
 
 button{
   background-color: orange;
+  border-radius: 15px;
   margin: 15px;
   padding: 20px;
 }
 
+.header{
+  margin: 15px 0 30px 0;
+  text-align: left;
+}
+
 .stats{
   display: flex;
+  flex-direction: row;
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
 
 .stats__stat{
-    padding: 50px;
+    margin: 10px 0;
     width: 50%;
+}
+
+.stats__stat h2{
+  font-size: 1rem;
+  display: inline-block;
+}
+
+.stats__stat p{
+  display: inline-block;
+  font-size: 3rem;
+  padding: 10px;
+}
+
+.stats__pic{
+  width: 30%;
+  border-radius: 50%;
+}
+
+.placeholder-img{
+  /*min-height: 500px;*/
+  object-fit: cover;
+  object-position: center;
+  width: 90%;
+}
+
+.placeholder-text{
+  font-size: 1rem;
+  font-weight: lighter;
+  margin: 20px;
+}
+
+.loading-sign{
+  display: block;
+  margin: 0 auto;
+  width: 25%;
 }
